[package]
name = "temptest"
version = "0.1.0"
authors = ["laerling <laerling@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.37.0"

#[dependencies.glfw]
#git = "https://github.com/bjz/glfw-rs.git"
